# dondevalaplata

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  archive-manifest.json
etl/: .env.example  asap_transparencia.yaml  cadencia.yaml  decreto_supersessions.yaml  deuda_anomalies.yaml  fallos_ficha_2022.yaml  novedades_seed.yaml  pyproject.toml  sources.yaml  titularidad.yaml  vendor_aliases.yaml
etl/etl/: __init__.py  __main__.py  archive.py  cadencia.py  cli.py  config.py  coparticipacion.py  deuda_historica.py  fallos.py  gasto_partida.py  http_client.py  ipc.py  manifest.py  mcr_docs.py  novedades.py  poblacion.py  r2.py  r2_sync.py  sibom.py  sibom_adjudicaciones.py  spanish_numbers.py  storage.py  titularidad.py  transparencia.py
etl/tests/: test_archive.py  test_build_adjudicaciones.py  test_build_cadencia.py  test_build_coparticipacion.py  test_build_deuda_historica.py  test_build_fallos.py  test_build_gasto_partida.py  test_build_poblacion.py  test_build_titularidad.py  test_build_transparencia.py  test_cadencia.py  test_cli_archive.py  test_cli_build_adjudicaciones.py  test_cli_build_cadencia.py  test_cli_build_coparticipacion.py  test_cli_build_deuda_historica.py  test_cli_build_fallos.py  test_cli_build_gasto_partida.py  test_cli_build_ipc.py  test_cli_build_novedades.py  test_cli_build_poblacion.py  test_cli_build_titularidad.py  test_cli_build_transparencia.py  test_cli_env.py  test_cli_sync_r2.py  test_config.py  test_coparticipacion.py  test_deuda_anomalies.py  test_deuda_historica.py  test_fallos_curated_ficha.py  test_fallos_text_layer.py  (+19 more)
(+225 files in other folders)
