[project]
name = "etl"
version = "0.1.0"
description = "Archival and build pipeline for the Portal de Transparencia de Coronel Rosales."
requires-python = ">=3.13"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.32",
  "pandas>=2.2",
  "boto3>=1.34",
  "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
etl = "etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
